[package]
name = "wasm-react"
version = "0.2.1"
edition = "2021"
authors = ["Yichuan Shen"]
description = "WASM bindings for React."
repository = "https://github.com/yishn/wasm-react"
license = "MIT OR Apache-2.0"
keywords = ["react", "ui", "wasm", "js", "web"]
categories = ["gui", "wasm", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 's'

[dependencies]
wasm-bindgen = "0.2.80"
js-sys = "0.3.57"
paste = "1.0.7"

[dependencies.web-sys]
version = "0.3.57"
features = [
  "Event", "MouseEvent", "FocusEvent", "KeyboardEvent", "DragEvent",
  "PointerEvent", "WheelEvent", "AnimationEvent", "TransitionEvent",
  "Element"
]
