[package]
name = "wasm-react"
version = "0.3.1"
edition = "2021"
authors = ["Yichuan Shen"]
description = "WASM bindings for React."
repository = "https://github.com/yishn/wasm-react"
license = "MIT OR Apache-2.0"
keywords = ["react", "ui", "wasm", "js", "web"]
categories = ["gui", "wasm", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 's'

[dependencies]
wasm-bindgen = "0.2.81"
js-sys = "0.3.58"
paste = "1.0.7"

[dependencies.web-sys]
version = "0.3.58"
features = [
  "Event", "MouseEvent", "FocusEvent", "KeyboardEvent", "DragEvent",
  "PointerEvent", "WheelEvent", "AnimationEvent", "TransitionEvent",
  "Element"
]

[workspace]
members = [
  "./examples/01-hello-world",
  "./examples/02-todo",
  "./examples/03-material-ui",
  "./examples/04-context",
]
